syntax = "proto3";

import "s_cluster.proto";

package rpc;

option go_package = "rpc";

// ExecutionService coordinates the execution of DataFrames/Plans/Stages
service ExecutionService {
    rpc RunStage (MRunStageRequest) returns (MRunStageResponse) {}
}

message MRunStageRequest {
    int32 stageId = 1;
    bool   runShuffle = 2;
    bool   prepCollect = 3;
    uint64 assignedBucket = 4;
    repeated uint64 buckets = 5 [packed=true];
    repeated MWorkerDescriptor workers = 6;
}


message MRunStageResponse {
    // TODO
}
